add CRD for book

--- a/templates/book/components/book_card.html.twig
+++ b/templates/book/components/book_card.html.twig
@@ -3,5 +3,6 @@
         <h5 class="card-title">{{ book.name }}</h5>
         <p class="card-text">{{ book.description }}</p>
         <a href="#" class="card-link">{{ book.created|date("d/m/Y") }}</a>
+        <a href="/books/delete?id={{ book.id }}" class="btn btn-sm btn-danger">Delete</a>
     </div>
 </div>
