--- a/templates/login/login_form.html.twig
+++ b/templates/login/login_form.html.twig
@@ -13,7 +13,7 @@
             <label for="exampleFormControlInput1" class="form-label">Email</label>
             <input type="text" class="form-control" id="exampleFormControlInput1" name="email">
             <label for="exampleFormControlInput1" class="form-label">Password</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" name="password">
+            <input type="password" class="form-control" id="exampleFormControlInput1" name="password">
         </div>
         <input type="submit" name="login" class="btn btn-primary" value="Login">
     </form>
