update on bookshelf update book

--- a/templates/public/welcome.html.twig
+++ b/templates/public/welcome.html.twig
@@ -3,4 +3,5 @@
 {% block title %} CONECTAT {% endblock %}
 {% block content %}
 <h3>Hello, {{ user.email }}</h3>
+    <a href="/logout">Logout</a>
 {% endblock %}
