--- a/templates/book/components/book_card.html.twig
+++ b/templates/book/components/book_card.html.twig
@@ -6,5 +6,6 @@
         <p class="card-text">{{ book.description|slice(0, 100) }}...</p>
         <a href="#" class="card-link">{{ book.created|date("d/m/Y") }}</a>
         <a href="/books/delete?id={{ book.id }}" class="btn btn-sm btn-danger">Delete</a>
+        <a href="/books/edit?id={{ book.id }}" class="btn btn-sm btn-danger">Edit</a>
     </div>
 </div>
