--- a/templates/login/login_form.html.twig
+++ b/templates/login/login_form.html.twig
@@ -16,5 +16,10 @@
             <input type="password" class="form-control" id="exampleFormControlInput1" name="password">
         </div>
         <input type="submit" name="login" class="btn btn-primary" value="Login">
+        <a href="/register">Register</a>
+
+
     </form>
+
+
 {% endblock %}
