--- a/templates/public/welcome.html.twig
+++ b/templates/public/welcome.html.twig
@@ -4,4 +4,7 @@
 {% block content %}
 <h3>Hello, {{ user.email }}</h3>
     <a href="/logout">Logout</a>
+    <a href="/books">Books</a>
+    <a href="/authors">Authors</a>
+    <a href="/publishers">Publishers</a>
 {% endblock %}
