--- a/templates/book/components/book_card.html.twig
+++ b/templates/book/components/book_card.html.twig
@@ -3,6 +3,8 @@
         <h5 class="card-title">{{ book.name }}</h5>
         <p>Editura: {{ book.publisher.name }}</p>
         <p>Autori: {{ book.authors|length > 0 ? book.authors|join(', ') : "-" }}</p>
+        <p>Pages: {{ book.totalPages }}</p>
+        <p>ISBN: {{ book.isbn }}</p>
         <p class="card-text">{{ book.description|slice(0, 100) }}...</p>
         <a href="#" class="card-link">{{ book.created|date("d/m/Y") }}</a>
         <a href="/books/delete?id={{ book.id }}" class="btn btn-sm btn-danger">Delete</a>
